--- a/css/index style.css
+++ b/css/index style.css
@@ -1,21 +1,56 @@
+* {
+    margin: 0;
+    padding: 0;
+    font-family: "poppins", sans-serif;
+    box-sizing: border-box;
+}
+
+
+
 .header {
-    background: rgba(90, 15, 15, 0.938);
-    height: 150px;
+   height: 100vh;
+   width: 100%;
+   padding: 0 8%;
+   background: #080008;
+   position: relative;
+}
+
+nav {
     display: flex;
+    align-items: center;
     justify-content: space-between;
 }
 
-#logo {
-    height: 150px;
+.logo {
+    width: 140px;
 }
 
-.nav-parent {
-    padding-right: 20px;
-    padding-top: 40px;
+.nav-links {
+    padding: 28px 0;
 }
 
-.navbar {
-    color: burlywood;
-    font-size: 40px;
-    background-color: black;
+.nav-links li {
+      display: inline-block;
+      margin: 0 15px;
+}
+
+.nav-links li a {
+    text-decoration: none;
+    color: #fff;
+    padding: 5px 0;
+}
+
+.nav-links li a::after {
+    content: '';
+    background: #ff3d00;
+    width: 0;
+    height: 2px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transition: width 0.5s;
+}
+
+.nav-links li a:hover::after {
+    width: 100%;
 }
