--- a/css/index style.css
+++ b/css/index style.css
@@ -8,10 +8,10 @@
 
 
 .header {
-   height: 100vh;
+   height: 100px;
    width: 100%;
    padding: 0 8%;
-   background: #080008;
+   background: #912525;
    position: relative;
 }
 
@@ -22,7 +22,14 @@ nav {
 }
 
 .logo {
-    width: 140px;
+    width: 100px;
+    padding-right: 30px;
+}
+
+.nam {
+   left: 20%;
+   color: #fff;
+   flex: 1;
 }
 
 .nav-links {
@@ -31,13 +38,14 @@ nav {
 
 .nav-links li {
       display: inline-block;
-      margin: 0 15px;
+      margin: 0 10px;
 }
 
 .nav-links li a {
     text-decoration: none;
     color: #fff;
     padding: 5px 0;
+    position: relative;
 }
 
 .nav-links li a::after {
@@ -54,3 +62,52 @@ nav {
 .nav-links li a:hover::after {
     width: 100%;
 }
+
+.sign {
+    background: blue;
+    color: #fff;
+    padding: 10px 30px;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.search {
+    position: absolute;
+    left: 29%;
+    width: 30%;
+    max-width: 500px;   
+}
+
+.search form {
+    background: #fff;
+    padding: 10px;
+    border-radius: 8px;
+    display: flex;
+}
+
+.search form input {
+    flex: 1;
+    border: none;
+    outline: none;
+    padding: 0 20px;
+    font-size: 18px;
+}
+
+/* content css */
+
+.big_name {
+    font-size: 70px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin: 30px 30px;
+}
+
+.body-parent {
+    background: #ff3d00;
+    display: flex;
+}
+
+.images {
+   background-color: #ff3d00;
+}
+
+.filter
