--- a/css/index style.css
+++ b/css/index style.css
@@ -6,27 +6,26 @@
     max-width: 1500px;
 }
 
-
+body {
+    align-self: center;
+}
 
 .header {
    height: 100px;
    width: 100%;
    padding: 0 8%;
    background: #912525;
-   position: relative;
+   position: sticky;
+   
 }
 
-/*.nav-header {
-   display: flex;
-   flex-wrap: nowrap;
-   justify-content: space-evenly;
-} */
 
 nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: auto;
+    flex-wrap: nowrap;
 } 
 
 .logo {
@@ -47,11 +46,9 @@ nav {
 }
 
 .search {
-    position: absolute;
-    left: 29%;
+    left: 10%;
     width: 30%;
-    max-width: 40%px;
-    margin: auto;  
+    flex: 3;
 }
 
 .nav-links li {
