--- a/css/new.css
+++ b/css/new.css
@@ -122,47 +122,47 @@ html, body {
 }
 
 .body-parent {
-    background: #ff3d00;
     display: flex;
     box-sizing: border-box;
     min-height: 1000px;
-    max-height: 2000px;
+    max-height: 3000px;
     justify-content: space-between;
     margin: 15px 15px;
 }
 
 .image-gallery {
-    background: aqua;
-    height: 900px;
+    max-height: 2000px;
     width: 80%;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     margin: 15px 15px;
-    overflow: scroll;
-    justify-content: center;
+    overflow: hidden;
+    justify-content: space-around;
     border-radius: 10px;
 }
 
 .image-gallery img {
-    max-width: 500px;
-    max-height: 400px;
+    max-width: 600px;
+    max-height: 600px;
     margin: 15px 25px;
 }
 
 .filter {
-    background: chartreuse;
-    height: 900px;
+    background: #fff;
+    max-height: 300px;
     width: 20%;
-    display: inline-flex;
+    display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    padding: 30px auto;
 }
 
 .filter button {
     width: 150px;
-    height: 30px;
+    height: 55px;
     margin: 5px;
+    font-size: 25px;
+    border: 0px;
 }
 
 
