--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,6 @@ html, body {
     padding: 0;
     height: 100vh;
     width: 100%;
-    
 }
 
 
@@ -148,6 +147,10 @@ html, body {
     margin: 15px 25px;
 }
 
+.image-gallery a:hover {
+    opacity: 0.8;
+}
+
 .filter {
     background: #fff;
     max-height: 300px;
@@ -160,11 +163,16 @@ html, body {
 .filter button {
     width: 150px;
     height: 55px;
-    margin: 5px;
+    margin: 5px 5px;
     font-size: 25px;
     border: 0px;
 }
 
+.filter button:hover {
+    border: 1px solid;
+    cursor: pointer;
+    
+}
 
 
 /*  css for the footer goes here*/
@@ -192,7 +200,7 @@ ul{
 .footer{
 	background-color: #24262b;
     padding: 70px 0;
-    margin: 10px 0;
+    margin: 100px 0;
 }
 .footer-col{
    width: 25%;
