--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,7 @@ html, body {
     padding: 0;
     height: 100vh;
     width: 100%;
+    background-image: url(../image/night\ city.jpg);
 }
 
 
@@ -17,17 +18,18 @@ html, body {
 .logo {
     height: 90px;
     display: flex;
-    
+    justify-content: center;
 }
 
 .logo h1 {
-   color: aliceblue;
-   padding-top: 20px; 
+   color: aliceblue; 
    padding-left: 5px;
+   font-size: 50px;
+   margin: 15px 5px;
 }
 
 .search {
-   padding-top: 25px;
+   margin: 15px 10px;
    
 }
 
@@ -36,7 +38,7 @@ html, body {
     padding: 10px;
     border-radius: 8px;
     display: flex;
-     
+    
 }
 
 .search form input {
@@ -45,6 +47,7 @@ html, body {
     padding: 0 20px;
     font-size: 18px;
     width: 500px;
+    font-size: 25px; 
 }
 
 .nav-links {
@@ -112,162 +115,85 @@ html, body {
     cursor: pointer;
 }
 
-/* css for the body content goes here */
 
-.big_name {
-    font-size: 70px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin: 30px 30px;
-}
 
-.body-parent {
-    display: flex;
+/* */
+
+*,
+*:before,
+*:after{
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
-    min-height: 1000px;
-    max-height: 3000px;
-    justify-content: space-between;
-    margin: 15px 15px;
-}
-
-.image-gallery {
-    max-height: 2000px;
-    width: 80%;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    margin: 15px 15px;
-    overflow: hidden;
-    justify-content: space-around;
-    border-radius: 10px;
-}
-
-.image-gallery img {
-    max-width: 600px;
-    max-height: 600px;
-    margin: 15px 25px;
-}
-
-.image-gallery a:hover {
-    opacity: 0.8;
-}
-
-.filter {
-    background: #fff;
-    max-height: 300px;
-    width: 20%;
-    display: flex;
-    flex-wrap: wrap;
-    padding: 30px auto;
-}
-
-.filter button {
-    width: 150px;
-    height: 55px;
-    margin: 5px 5px;
+    font-family: "Poppins",sans-serif;
+    font-weight: 500;
     font-size: 25px;
-    border: 0px;
+}
+.big {
+    height: 50%;
+    display: grid;
+    place-items: center;
+}
+.wrapper{
+    box-sizing: content-box;
+    background-color: #fff;
+    height: 100px;
+    width: 1500px;
+    padding: 50px 30px;
+    margin: 250px 0;
+    margin-bottom: 100px;
+    display: flex;
+    border-radius: 8px;
+    box-shadow: 0 20px 25px rgba(0,0,0,0.2);
+}
+.words{
+    overflow: hidden;
 }
 
-.filter button:hover {
-    border: 1px solid;
-    cursor: pointer;
+.words span,p {
+    font-size: 100px;
+}
+
+span{
+    display: block;
+    height: 100%;
+    padding-left: 20px;
+    color: #0e6ffc;
+    animation: spin_words 6s infinite;
     
 }
-
-
-/*  css for the footer goes here*/
-
-body{
-	line-height: 1.5;
-	font-family: 'Poppins', sans-serif;
-}
-*{
-	margin:0;
-	padding:0;
-	box-sizing: border-box;
-}
-.container{
-	max-width: 1170px;
-	margin:auto;
-}
-.row{
-	display: flex;
-	flex-wrap: wrap;
-}
-ul{
-	list-style: none;
-}
-.footer{
-	background-color: #24262b;
-    padding: 70px 0;
-    margin: 100px 0;
-}
-.footer-col{
-   width: 25%;
-   padding: 0 15px;
-}
-.footer-col h4{
-	font-size: 18px;
-	color: #ffffff;
-	text-transform: capitalize;
-	margin-bottom: 35px;
-	font-weight: 500;
-	position: relative;
-}
-.footer-col h4::before{
-	content: '';
-	position: absolute;
-	left:0;
-	bottom: -10px;
-	background-color: #e91e63;
-	height: 2px;
-	box-sizing: border-box;
-	width: 50px;
-}
-.footer-col ul li:not(:last-child){
-	margin-bottom: 10px;
-}
-.footer-col ul li a{
-	font-size: 16px;
-	text-transform: capitalize;
-	color: #ffffff;
-	text-decoration: none;
-	font-weight: 300;
-	color: #bbbbbb;
-	display: block;
-	transition: all 0.3s ease;
-}
-.footer-col ul li a:hover{
-	color: #ffffff;
-	padding-left: 8px;
-}
-.footer-col .social-links a{
-	display: inline-block;
-	height: 40px;
-	width: 40px;
-	background-color: rgba(255,255,255,0.2);
-	margin:0 10px 10px 0;
-	text-align: center;
-	line-height: 40px;
-	border-radius: 50%;
-	color: #ffffff;
-	transition: all 0.5s ease;
-}
-.footer-col .social-links a:hover{
-	color: #24262b;
-	background-color: #ffffff;
+@keyframes spin_words{
+    10%{
+        transform: translateY(-112%);
+    }
+    25%{
+        transform: translateY(-100%);
+    }
+    35%{
+        transform: translateY(-212%);
+    }
+    50%{
+        transform: translateY(-200%);
+    }
+    60%{
+        transform: translateY(-312%);
+    }
+    75%{
+        transform: translateY(-300%);
+    }
+    85%{
+        transform: translateY(-412%);
+    }
+    100%{
+        transform: translateY(-400%);
+    }
 }
 
-/* responsive */
+.start-link {
+    font-size: 50px;
+    text-decoration: none;
+}
 
-@media(max-width: 767px){
-    .footer-col{
-      width: 50%;
-      margin-bottom: 30px;
-  }
-  }
-  @media(max-width: 574px){
-    .footer-col{
-      width: 100%;
-  }
-  }
+.start-link:hover {
+    color:aqua;
+}
