--- a/css/home page.css
+++ b/css/home page.css
@@ -3,6 +3,7 @@ html, body {
     padding: 0;
     height: 100vh;
     width: 100%;
+    font-size: 20px;
 }
 
 
@@ -22,12 +23,12 @@ html, body {
 
 .logo h1 {
    color: aliceblue;
-   padding-top: 20px; 
+   padding-top: 15px; 
    padding-left: 5px;
 }
 
 .search {
-   padding-top: 25px;
+   padding-top: 20px;
    
 }
 
@@ -43,8 +44,20 @@ html, body {
     border: none;
     outline: none;
     padding: 0 20px;
-    font-size: 18px;
+    font-size: 23px;
     width: 500px;
+}
+
+.search form button {
+    font-size: 20px;
+    width: 100px;
+    border: 0px;
+    border-left: 2px;
+}
+
+.search form button:hover {
+    border: 2px solid;
+    cursor: pointer;
 }
 
 .nav-links {
