--- a/css/home page.css
+++ b/css/home page.css
@@ -21,6 +21,10 @@ html, body {
     
 }
 
+.logo:hover {
+    cursor: pointer;
+}
+
 .logo h1 {
    color: aliceblue;
    padding-top: 15px; 
@@ -125,6 +129,11 @@ html, body {
     cursor: pointer;
 }
 
+.sign:hover, .log-in:hover {
+    width: 150px;
+    padding-left: 45px;
+}
+
 /* css for the body content goes here */
 
 .big_name {
@@ -162,6 +171,7 @@ html, body {
 
 .image-gallery a:hover {
     opacity: 0.8;
+    border-radius: 100px;
 }
 
 .filter {
